# acpackage

./: LICENSE  README.md  example.py  pyproject.toml
docs/: README.md
src/acpackage/: __init__.py
